# python-data-science

./: .gitigonre
arrays/ex00/: give_bmi.py
ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py  teste.py
ex03/: NULL_not_found.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py  ft_filter.py
ex07/: sos.py
ex08/: Loading.py  tester.py
ex09/: CHANGELOG.txt  INSTALLATION.txt  pyproject.toml  tester.py
ex09/ft_package/: count_in_list.py
starting/ex05/: building.py
starting/ex06/: ft_filter.py
starting/ex07/: sos.py
starting/ex08/: Loading.py
starting/ex09/: LICENSE  README.md  pyproject.toml
starting/ex09/ft_package/: __init__.py  count_in_list.py
