[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="Mohamed El hadjaoui", email="author@example.com" },
]
license = "MIT"
description = "A small test package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["example", "test"]
entry-points = {}
[project.urls]
Homepage = "https://github.com/elhadjaoui/python-data-science/tree/main/ex09"